--- a/html/footer.html
+++ b/html/footer.html
@@ -3,9 +3,9 @@
          • 
         <a href="https://github.com/AUTOMATIC1111/stable-diffusion-webui">Github</a>
          • 
-        <a href="https://gradio.app">Gradio</a>
+        <a href="https://img0.baidu.com/it/u=377600802,1371567519&fm=253&fmt=auto&app=138&f=JPEG?w=326&h=220">不得利用AI绘图制作、传播或使用任何违法违规、侵权、色情、暴力、恐怖、诽谤、欺诈或其他有害的图形、图片等内容</a>
          • 
-        <a href="#" onclick="showProfile('./internal/profile-startup'); return false;">Startup profile</a>
+        <a href="#">个人行为均与提供教程者无关！</a>
          • 
         <a href="/" onclick="javascript:gradioApp().getElementById('settings_restart_gradio').click(); return false">Reload UI</a>
 </div>
